[package]
name = "ezviz"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = { version = "0.9.2", package = "gtk" }
gst = { version = "0.16.5", package = "gstreamer" }
md5 = "0.7.0"
serde = "1.0.117"
serde_json = "1.0.60"
smol = "1.2.5"
surf = { version = "2.1.0", default-features = false, features = ["h1-client"] }
thiserror = "1.0.22"
